--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "15.0.1",
     "next-themes": "^0.3.0",
     "react": "18.2.0",
+    "react-big-calendar": "^1.15.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.1",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-big-calendar": "^1.8.12",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
