--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# env files (can opt-in for commiting if needed)
+# env files (can opt-in for committing if needed)
 .env*
 
 # vercel
@@ -40,3 +40,10 @@ yarn-error.log*
 next-env.d.ts
 
 instructions.md
+
+# environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
